# c_table_arranger

./: .gitignore  CLAUD.md  README.md  build_binary.py  c-table-arranger.spec  pyproject.toml
c_table_arranger/: __init__.py  array_extractor.py  cli.py  formatter.py  main.py  parser.py
test_data/: input01.c  input01_out.txt
