[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c-table-arranger"
version = "0.1.0"
description = "C language array data extractor and formatter"
requires-python = ">=3.8"
authors = [
    {name = "Developer"},
]
dependencies = [
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "anyio",
    "ruff",
    "pyright",
    "pyinstaller",
]
build = [
    "pyinstaller>=5.0.0",
]

[project.scripts]
c-table-arranger = "c_table_arranger.main:main"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "strict"

[tool.setuptools]
packages = ["c_table_arranger"]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
